fixed Windows header overflow style

--- a/app/assets/stylesheets/responsive_styles.css
+++ b/app/assets/stylesheets/responsive_styles.css
@@ -13,7 +13,7 @@
   section h2 {
     font-size: 1rem;
   }
-  .welcome p {
+  p.welcome {
     font-size: 2rem;
     font-weight: 600;
     line-height: 2rem;
