--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -63,6 +63,7 @@ header, section, footer {
 
 header {
   margin-top: 2rem;
+  overflow: hidden;
 }
 
 header h1 {
